# SilkTex

./: .clang-format  .dockerignore  .gitignore  AUTHORS  Dockerfile  Makefile.in  README.md  aclocal.m4  app.silktex.SilkTex.yml  biome.jsonc  com.github.gummi_editor.yaml  config.h.in  configure~  flake.nix  main.py  meson-post-install.py  meson.build  org.silktex.gnome.json  run.sh  setup.py
.cache/clangd/index/: biblio.c.6438C11498968575.idx  biblio.h.0274B5107BF3EF24.idx  configfile.c.C23796E99317D63B.idx  configfile.h.424B42D94D100633.idx  constants.h.660327777598CEFA.idx  editor.c.73EAF52835820BA3.idx  editor.h.CA54E49504E3185C.idx  environment.c.E9FEF99D97B1B187.idx  environment.h.A118639559FA4DA1.idx  external.c.ACAB985C02017672.idx  external.h.91F2BF250337FE7E.idx  gui-import.c.C0A7DF198A8EF7B6.idx  gui-import.h.B964FB00949EFCFD.idx  gui-infoscreen.c.D9B73C213452B07C.idx  gui-infoscreen.h.0E6F1673EE3A4D8F.idx  gui-main.c.AB07460754D5DBCC.idx  gui-main.h.227EC0C5AC288CFC.idx  gui-menu.c.A93520784A8F4CD3.idx  gui-menu.h.864CD33D5404446F.idx  gui-prefs.c.DF8FF5753E1D9F67.idx  gui-prefs.h.E0012BEA62172376.idx  gui-preview.c.1D736ABD00573D26.idx  gui-preview.h.A1494FDDD68393B6.idx  gui-project.c.1BDB8FCBA7CFEE1E.idx  gui-project.h.A8520342DE3B3E09.idx  gui-search.c.7AEA4EBC7DDACBDD.idx  gui-search.h.C9E850A1E217543A.idx  gui-snippets.c.E705D75206775EE3.idx  gui-snippets.h.1EC76C87A6AA1BE9.idx  gui-tabmanager.c.42EFB10D812C72FF.idx  gui-tabmanager.h.696496B476A3031A.idx  importer.c.5B9306D3FC6718DD.idx  importer.h.507715C2BB1C0471.idx  iofunctions.c.041D576F87EDC861.idx  iofunctions.h.E123F3662E2E93D2.idx  latex.c.9BB4B2C9F445DC2E.idx  latex.h.2D080CEB529D2469.idx  latexmk.c.057DC7D6DE8AC41C.idx  latexmk.h.49842AAC6F4C957D.idx  main.c.CF378770DB116A0C.idx  (+18 more)
.github/workflows/: flathub-release.yml  goblint.yml
.opam-goblint/: config
.opam-goblint/goblint-switch/.opam-switch/: environment  switch-config  switch-state
.opam-goblint/log/: ocaml-base-compiler-6454-16be94.env  ocaml-base-compiler-6454-16be94.info  ocaml-base-compiler-6454-16be94.out
.opam-goblint/opam-init/: init.cmd  init.csh  init.fish  init.ps1  init.sh  init.zsh
.opam-goblint/opam-init/hooks/: sandbox.sh.hash
.opam-goblint/repo/default/: repo
data/: Makefile.in  meson.build  org.silktex.gnome.desktop.in  org.silktex.gnome.gschema.xml  org.silktex.gnome.metainfo.xml.in  org.silktex.gnome.service.in  silktex.gresource.xml
data/icons/: Makefile.in  meson.build
data/misc/: Makefile.in  app.silktex.SilkTex.metainfo.xml.in  gummi.1  gummi.desktop.in  meson.build
data/snippets/: Makefile.in  meson.build  snippets.cfg
data/styles/: silktex-gruvbox-dark.xml  silktex-gruvbox-light.xml  silktex-lights-out.xml
data/templates/: default.tex  vorlage.tex  welcome_text.tex
data/ui/: Makefile.in  SilkTex.cmb  gummi.ui  main.blp  meson.build  prefs.blp  silktex.blp  silktex.ui  silktex.ui.cmb  snippets.blp  snippets.ui
flatpak/: README.md  app.silktex.SilkTex.flathub.yml  app.silktex.SilkTex.yml  build.sh  flathub.json
lib/: Makefile.in
po/: LINGUAS  POTFILES.in  meson.build
scripts/: goblint-all.sh  goblint_all.py
src/: Makefile.in  __init__.py  application.c  application.h  application.py  bibliography.py  compiler.c  compiler.h  config.py  configfile.c  configfile.h  constants.h  constants.py  document.py  editor.c  editor.h  editor.py  environment.h  environment.py  git.c  git.h  gtk4-compat.h  i18n.h  latex.c  latex.h  latex.py  layout.py  logger.py  main.c  main.py  meson.build  motion.c  motion.h  prefs.c  prefs.h  preview.c  preview.h  preview.py  project.py  searchbar.c  (+48 more)
src/gui/: gui-main.h  gui-main.py  gui-menu.h  gui-prefs.c  gui-preview.c  gui-preview.h  gui-project.c  gui-snippets.h
src/project/: project_sidebar.py
src/silktex/: __init__.py  app.py  application.py  editor.py  latex.py  main.py  main_window.py  preview.py  statistics.py  templates.py  window.py
src/silktex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tmp/: goblint_smoke.c
usr/local/share/silktex/: main.py
usr/local/share/silktex/silktex/: main.py
