# SilkTex - Modern LaTeX Editor
# Copyright (C) 2026 Bela Georg Barthelmes
# SPDX-License-Identifier: GPL-3.0-or-later

silktex_sources = files(
    'application.c',
    'application.h',
    'window.c',
    'window.h',
    'window-private.h',
    'window-git.c',
    'window-primary-menu.c',
    'editor.c',
    'editor.h',
    'compiler.c',
    'compiler.h',
    'git.c',
    'git.h',
    'preview.c',
    'preview.h',
    'prefs.c',
    'prefs.h',
    'searchbar.c',
    'searchbar.h',
    'snippets.c',
    'snippets.h',
    'synctex.c',
    'synctex.h',
    'structure.c',
    'structure.h',
    'latex.c',
    'latex.h',
    'main.c',
    'configfile.c',
    'configfile.h',
    'style-schemes.c',
    'style-schemes.h',
    'constants.h',
    'utils.c',
    'utils.h',
)

executable(
    'silktex',
    silktex_sources,
    silktex_resources,
    dependencies: project_dependencies,
    c_args:       build_args,
    install:      true,
)
